Working on the widget

--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -3,6 +3,7 @@
 <resources>
  <color name="white">#FFFFFF</color>
  <color name="transparent">#00000000 </color>
+ <color name="Transparent">#00000000 </color> 
  <color name="yellow">#FFFF00</color>
  <color name="fuchsia">#FF00FF</color>
  <color name="red">#FF0000</color>
