--- a/res/layout/second_activity.xml
+++ b/res/layout/second_activity.xml
@@ -3,13 +3,9 @@
   android:id="@+id/RelativeLayout1"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
-  android:orientation="vertical" >
+  android:orientation="vertical" 
+  android:background="@color/transparent"
+  >
  
-  <TextView
-    android:id="@+id/TextView1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true"
-    android:text="Oh Hai!" />
+
 </RelativeLayout>
