--- a/res/layout/widget.xml
+++ b/res/layout/widget.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:orientation="vertical" >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@android:color/transparent"
+        android:orientation="horizontal" >
 
-			<ImageButton
-				android:id="@+id/button_widget_take_photo"
-				style="?android:attr/buttonStyleSmall"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:background="@drawable/ic_launcher"
-               	android:focusable="true"
-				android:text="Button" />
+        <FrameLayout
+            android:id="@+id/camera_preview"
+            android:layout_width="1px"
+            android:layout_height="1px" />
+                 
+        <ImageButton
+            android:id="@+id/button_widget_take_photo"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_action_camera" 
+            />
+    </LinearLayout>
 
-
-			<!-- Need to fix the image button here -->
-			
-			
-			
-			
-			
-			
-			
-			
-		</LinearLayout>
+</FrameLayout>
