--- a/res/layout/second_activity.xml
+++ b/res/layout/second_activity.xml
@@ -6,6 +6,13 @@
   android:orientation="vertical" 
   android:background="@color/transparent"
   >
+  
+             <FrameLayout
+            android:id="@+id/camera_preview"
+            android:layout_width="1px"
+            android:layout_height="1px" />
+         <!-- IMPORTANT, The height and width of the preview window listed above are 1 pixel so that it won't be seen.
+         From research I cannot find a way to take a photo without a viewing window, which can be cumbersome -->
  
 
 </RelativeLayout>
